# Voxel-Castle

./: .copilot-instructions.md  .gitignore  AI_PROGRAMMING_WORKFLOW.md  AI_WORKFLOW_MANUAL.md  ATLAS_GENERATION_FILES.md  BUILD_GUIDE.md  CMakeLists.txt  CONTROLS.md  COPILOT_MASTER_PROMPT.md  CURRENT_TODO.md  CURRENT_TODO_CLEAN.md  CURRENT_TODO_OLD.md  Cleanup and Switch to C++.md  DEVELOPMENT.md  ENGINE_MIGRATION_TODO.md  GETTING_STARTED.md  MUST-READ-Prompt-Fixing-Bugs.txt  NEW_WORLDGEN_PLAN.md  NEXT_CHAT_PROMPT.md  NEXT_STEPS_SUMMARY.md  README.md  RIVER_DEBUG_HANDOFF.md  ROADMAP.md  TRANSITION_PLAN.md  UI_SYSTEM_ANALYSIS.md  WORLD_GENERATION_NEXT_STEPS.md  atlas_face_system.py  atlas_plan.json  block_mapping_generated.py  build_log.txt  calculate_tectonic_scaling.py  create_atlas.py  create_atlas_backup.py  create_atlas_efficient.py  create_atlas_modular.py  create_atlas_official.py  create_atlas_old.py  create_debug_atlas.py  debug_batch_terrain.py  debug_log.txt  (+29 more)
engine/: CMakeLists.txt
engine/include/ecs/components/: position_component.h  renderable_component.h  velocity_component.h
engine/include/ecs/systems/: movement_system.h
engine/include/input/: MouseCaptureManager.h
engine/include/platform/: Window.h  fullscreen_debug.h
engine/include/rendering/: DebugOverlay.h  DebugText.h  FontManager.h  TextRenderer.h  block_outline_renderer.h  debug_render_mode.h  debug_utils.h  face_debug_utils.h  mesh_builder.h  mesh_job_system.h  mesh_renderer.h  render_utils.h  shader.h  texture_atlas.h  voxel_mesh.h
engine/include/ui/: BlockVisualizationPanel.h  FontManager.h  GeologicalDebugUI.h  MainMenu.h  MenuSystem.h  SeedDebugPanel.h  TextRenderer.h  UIElement.h  UILogger.h  UIRenderer.h  UISystem.h  WorldConfigurationUI.h  WorldGenerationUI.h  WorldMapRenderer.h  WorldPreviewRenderer.h.backup  WorldSimulationUI.h
engine/include/util/: enhanced_noise.h  noise.h
engine/include/utils/: debug_logger_stub.h  logging_utils.h
engine/include/world/: BackgroundSimulationEngine.h  ContinuousField.h  ContinuousFieldBenchmark.h  ErosionEngine.h  FractalContinentGenerator.h  FractalDetailEngine.h  GeologicalSimulator.h  GeologicalSnapshot.h  GeologicalTypes.h  HybridGeologicalSimulator.h  ParticleSimulationEngine.h  SpatialHashGrid.h  TectonicEngine.h  WaterSystemSimulator.h  block_properties.h  block_properties_generated.h  chunk_column.h  chunk_segment.h  climate_data.h  geological_constants.h  geological_data.h  hydrological_data.h  quadtree.h  regional_data.h  seed_world_generator.h  tectonic_plate.h  tectonic_simulator.h  test_mesh_generation.h  test_quadtree.h  test_voxel_system.h  voxel.h  voxel_face_patterns.h  voxel_types.h  world_coordinates.h  world_generator.h  world_manager.h  world_metadata.h  world_parameters.h  world_persistence_manager.h  world_seed.h
engine/src/core/: engine_core.cpp
engine/src/input/: MouseCaptureManager.cpp
engine/src/mesh/: MeshJobSystem.cpp
engine/src/platform/: Window.cpp  Window.h  fullscreen_debug.cpp
engine/src/rendering/: DebugOverlay.cpp  FontManager.cpp  Shader.cpp  TextRenderer.cpp  block_outline_renderer.cpp  debug_utils.cpp  mesh_builder.cpp  mesh_builder_old.cpp  mesh_job_system.cpp  mesh_renderer.cpp  render_utils.cpp  texture_atlas.cpp
engine/src/ui/: BlockVisualizationPanel.cpp  BlockVisualizationPanel_clean.cpp  FontManager.cpp  GeologicalDebugUI.cpp  MainMenu.cpp  MenuSystem.cpp  MenuSystem.cpp.new  MenuSystem_minimal.cpp  MenuSystem_old.cpp  SeedDebugPanel.cpp  TextRenderer.cpp  UIElement.cpp  UILogger.cpp  UIRenderer.cpp  UISystem.cpp  WorldConfigurationUI.cpp  WorldGenerationUI.cpp  WorldMapRenderer.cpp  WorldPreviewRenderer.cpp  WorldPreviewRenderer.cpp.backup  WorldSimulationUI.cpp
engine/src/ui/core/: UISystem.cpp  (+4 more)
engine/src/util/: enhanced_noise.cpp
engine/src/utils/: debug_logger_stub.cpp
engine/src/world/: BackgroundSimulationEngine.cpp  ContinuousField.cpp  ErosionEngine.cpp  FractalContinentGenerator.cpp  FractalContinentGenerator_backup.cpp  FractalDetailEngine.cpp  GeologicalSimulator.cpp  GeologicalSimulator_clean.cpp  GeologicalSimulator_minimal.cpp  GeologicalSimulator_old.cpp  GeologicalSnapshot.cpp  HybridGeologicalSimulator.cpp  ParticleSimulationEngine.cpp  SpatialHashGrid.cpp  TectonicEngine.cpp  WaterSystemSimulator.cpp  WorldManager.cpp  block_properties.cpp  block_properties_generated.cpp  chunk_column.cpp  chunk_segment.cpp  climate_data.cpp  geological_constants.cpp  geological_data.cpp  hydrological_data.cpp  quadtree.cpp  regional_data.cpp  seed_world_generator.cpp  tectonic_plate.cpp  tectonic_simulator.cpp  test_mesh_generation.cpp  test_quadtree.cpp  test_voxel_system.cpp  voxel_face_patterns.cpp  world_coordinates.cpp  world_generator.cpp  world_manager.cpp  world_metadata.cpp  world_parameters.cpp  world_persistence_manager.cpp  (+1 more)
game/: CMakeLists.txt
game/include/: SpectatorCamera.h
game/include/core/: BinaryReader.h  BinaryWriter.h  CameraMode.h  GameInitializer.h  GameLogic.h  GameLoop.h  GameRenderCoordinator.h  GameRenderer.h  GameStateManager.h  InputManager.h  JsonUtils.h  SaveManager.h  SaveManagerTest.h  Serializable.h  TimeManager.h  WorldSetup.h  WorldSetupGlobals.h  game.h
game/include/interaction/: BlockPlacement.h
game/include/physics/: PlayerPhysics.h
game/include/utils/: debug_logger.h
game/src/: SpectatorCamera.cpp  main.cpp
game/src/core/: BinaryReader.cpp  BinaryWriter.cpp  GameInitializer.cpp  GameLogic.cpp  GameLoop.cpp  GameRenderCoordinator.cpp  GameRenderer.cpp  GameSaveManagerTest.cpp  GameSerializationTest.cpp  GameStateDelegate.cpp  GameStateManager.cpp  GameTimeControl.cpp  InputManager.cpp  JsonUtils.cpp  SaveManager.cpp  SaveManagerTest.cpp  SerializationTest.cpp  TimeManager.cpp  WorldSetup.cpp  WorldSetupGlobals.cpp  game.cpp  game.cpp.corrupted
game/src/interaction/: BlockPlacement.cpp
game/src/physics/: PlayerPhysics.cpp
game/src/utils/: debug_logger.cpp
voxel_engine/: Cargo.toml  ENGINE_ARCHITECTURE.md
voxel_engine/src/: main.rs
voxel_engine/src/core/: mod.rs  window.rs
voxel_engine/src/graphics/: mod.rs  renderer.rs
(+325 files in other folders)
