[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"
authors = ["Voxel Castle Team"]
description = "A custom voxel engine for Voxel Fortress"

[dependencies]
# Window and event handling
winit = "0.28"

# Graphics API abstraction
wgpu = "0.17"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"  # For handling async operations

# Math libraries
glam = "0.24"

# ECS - we'll decide which one to use after research
legion = "0.4"   # Optional - will compare with others
hecs = "0.10"    # Optional - will compare with others

# Noise for terrain generation
noise = "0.8"

# Asset handling
image = "0.24"

# Utilities
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "engine_benchmarks"
harness = false
